--- a/dbo/templates/transfers.html
+++ b/dbo/templates/transfers.html
@@ -12,26 +12,7 @@
   <div class="drawer drawer-mobile">
     <input id="drawer-transfers" type="checkbox" class="drawer-toggle" />
     <div class="drawer-content flex flex-col min-h-screen">
-      <!-- Navbar -->
-      <div class="w-full navbar bg-primary text-primary-content shadow-lg">
-        <div class="flex-none lg:hidden">
-          <label for="drawer-transfers" class="btn btn-square btn-ghost">
-            <svg xmlns="http://www.w3.org/2000/svg" class="inline-block w-6 h-6 stroke-current" fill="none" viewBox="0 0 24 24">
-              <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16"></path>
-            </svg>
-          </label>
-        </div>
-        <div class="flex-1 px-2 mx-2 text-xl font-bold">ДБО Система</div>
-        <div class="flex-none hidden lg:block">
-          <ul class="menu menu-horizontal px-1">
-            <li><a href="index.html">Главная</a></li>
-            <li><a href="accounts.html">Счета</a></li>
-            <li><a class="active">Переводы</a></li>
-            <li><a href="history.html">История</a></li>
-            <li><a href="settings.html">Настройки</a></li>
-          </ul>
-        </div>
-      </div>
+       {% include 'header.html' %}
 
       <!-- Main Content -->
       <main class="p-6 flex-1 overflow-y-auto">
