--- a/dbo/templates/header.html
+++ b/dbo/templates/header.html
@@ -8,29 +8,39 @@
         </label>
         <a href="{% url 'home' %}" class="text-xl font-bold">daisyAI</a>
       </div>
-      <ul class="menu menu-horizontal hidden lg:flex space-x-2">
-        <li><a href="{% url 'home' %}">Home</a></li>
-        <li><a href="{% url 'accounts' %}">Accounts</a></li>
-        <li><a href="{% url 'transfers' %}">Transfers</a></li>
-        <li><a href="{% url 'history' %}">History</a></li>
-        <li><a href="{% url 'settings' %}">Settings</a></li>
-      </ul>
+      <div class="flex items-center justify-end space-x-2 hidden lg:flex">
+        <ul class="menu menu-horizontal space-x-2">
+          <li><a href="{% url 'home' %}">Home</a></li>
+          <li><a href="{% url 'accounts' %}">Accounts</a></li>
+          <li><a href="{% url 'transfers' %}">Transfers</a></li>
+          <li><a href="{% url 'history' %}">History</a></li>
+          <li><a href="{% url 'settings' %}">Settings</a></li>
+        </ul>
+        <button id="theme-toggle" class="btn btn-square btn-ghost" aria-label="Toggle theme">
+          <svg id="theme-toggle-light-icon" class="w-6 h-6 hidden" fill="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path d="M12 3.75a.75.75 0 01.75.75v1.5a.75.75 0 01-1.5 0V4.5A.75.75 0 0112 3.75zM12 18a6 6 0 100-12 6 6 0 000 12zm0 3a.75.75 0 01.75.75v1.5a.75.75 0 01-1.5 0v-1.5A.75.75 0 0112 21zm8.25-9a.75.75 0 01.75.75h1.5a.75.75 0 010 1.5h-1.5a.75.75 0 01-.75-.75zm-15 0a.75.75 0 01.75.75H4.5a.75.75 0 010-1.5h1.5a.75.75 0 01-.75-.75zm11.03 7.28a.75.75 0 011.06 1.06l-1.06 1.06a.75.75 0 01-1.06-1.06zm-8.56-8.56a.75.75 0 011.06 1.06L6.44 13.44a.75.75 0 01-1.06-1.06zm8.56-1.06a.75.75 0 01-1.06-1.06l1.06-1.06a.75.75 0 011.06 1.06zm-8.56 8.56a.75.75 0 01-1.06-1.06l1.06-1.06a.75.75 0 011.06 1.06z"/></svg>
+          <svg id="theme-toggle-dark-icon" class="w-6 h-6 hidden" fill="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path d="M21.75 12a9.75 9.75 0 11-11.615-9.615 7.5 7.5 0 0011.615 9.615z"/></svg>
+        </button>
+      </div>
     </nav>
-  </div>
-
-  <!-- Drawer for small screens -->
-  <input id="menu-drawer" type="checkbox" class="drawer-toggle" />
-  <div class="drawer-side">
-    <label for="menu-drawer" class="drawer-overlay"></label>
-    <div class="menu p-4 w-64 bg-base-200 text-base-content">
-      <a href="{% url 'home' %}" class="text-xl font-bold mb-4 block">daisyAI</a>
-      <ul class="menu">
-        <li><a href="{% url 'home' %}">Home</a></li>
-        <li><a href="{% url 'accounts' %}">Accounts</a></li>
-        <li><a href="{% url 'transfers' %}">Transfers</a></li>
-        <li><a href="{% url 'history' %}">History</a></li>
-        <li><a href="{% url 'settings' %}">Settings</a></li>
-      </ul>
-    </div>
-  </div>
+   </div>
+ 
+   <!-- Drawer for small screens -->
+   <input id="menu-drawer" type="checkbox" class="drawer-toggle" />
+   <div class="drawer-side">
+     <label for="menu-drawer" class="drawer-overlay"></label>
+     <div class="menu p-4 w-64 bg-base-200 text-base-content">
+       <a href="{% url 'home' %}" class="text-xl font-bold mb-4 block">daisyAI</a>
+       <ul class="menu">
+         <li><a href="{% url 'home' %}">Home</a></li>
+         <li><a href="{% url 'accounts' %}">Accounts</a></li>
+         <li><a href="{% url 'transfers' %}">Transfers</a></li>
+         <li><a href="{% url 'history' %}">History</a></li>
+         <li><a href="{% url 'settings' %}">Settings</a></li>
+       </ul>
+       <button id="theme-toggle-drawer" class="btn btn-square btn-ghost mt-4" aria-label="Toggle theme">
+         <svg id="theme-toggle-light-icon-drawer" class="w-6 h-6 hidden" fill="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path d="M12 3.75a.75.75 0 01.75.75v1.5a.75.75 0 01-1.5 0V4.5A.75.75 0 0112 3.75zM12 18a6 6 0 100-12 6 6 0 000 12zm0 3a.75.75 0 01.75.75v1.5a.75.75 0 01-1.5 0v-1.5A.75.75 0 0112 21zm8.25-9a.75.75 0 01.75.75h1.5a.75.75 0 010 1.5h-1.5a.75.75 0 01-.75-.75zm-15 0a.75.75 0 01.75.75H4.5a.75.75 0 010-1.5h1.5a.75.75 0 01-.75-.75zm11.03 7.28a.75.75 0 011.06 1.06l-1.06 1.06a.75.75 0 01-1.06-1.06zm-8.56-8.56a.75.75 0 011.06 1.06L6.44 13.44a.75.75 0 01-1.06-1.06zm8.56-1.06a.75.75 0 01-1.06-1.06l1.06-1.06a.75.75 0 011.06 1.06zm-8.56 8.56a.75.75 0 01-1.06-1.06l1.06-1.06a.75.75 0 011.06 1.06z"/></svg>
+         <svg id="theme-toggle-dark-icon-drawer" class="w-6 h-6 hidden" fill="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path d="M21.75 12a9.75 9.75 0 11-11.615-9.615 7.5 7.5 0 0011.615 9.615z"/></svg>
+       </button>
+     </div>
+   </div>
 </div>
