--- a/dbo/templates/header.html
+++ b/dbo/templates/header.html
@@ -26,9 +26,36 @@
       <div class="flex items-center justify-end space-x-2 hidden lg:flex">
         <ul class="menu menu-horizontal space-x-2">
           <li><a href="{% url 'home' %}">Home</a></li>
-          <li><a href="{% url 'accounts' %}">Accounts</a></li>
           <li><a href="{% url 'transfers' %}">Transfers</a></li>
         </ul>
+        <!-- User dropdown: services shortcuts -->
+        <div class="dropdown dropdown-end">
+          <div tabindex="0" role="button" class="btn btn-ghost btn-sm">
+            <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 mr-1" viewBox="0 0 20 20" fill="currentColor"><path d="M10 3a3 3 0 100 6 3 3 0 000-6zM3 14a7 7 0 1114 0H3z"/></svg>
+            Профиль
+          </div>
+          <ul tabindex="0" class="dropdown-content menu bg-base-100 rounded-box z-[1] w-64 p-2 shadow">
+            <li class="menu-title"><span>Профиль</span></li>
+            <li><a href="{% url 'client_dashboard' %}">Личный кабинет</a></li>
+            
+            <li class="menu-title"><span>Банковские продукты</span></li>
+            {% if is_dbo_client %}
+            <li><a href="{% url 'my_services' %}">Мои услуги</a></li>
+            {% endif %}
+            <li><a href="{% url 'my_requests' %}">Мои заявки</a></li>
+            <li><a href="{% url 'create_service_request' %}">Создать заявку</a></li>
+            <li><a href="{% url 'banking_services' %}">Каталог услуг</a></li>
+
+            <li class="menu-title"><span>Операции</span></li>
+            <li><a href="{% url 'transfers_service' %}">Переводы</a></li>
+            <li><a href="{% url 'cards_service' %}">Карты</a></li>
+            <li><a href="{% url 'deposits_service' %}">Депозиты</a></li>
+            <li><a href="{% url 'investments_service' %}">Инвестиции</a></li>
+
+            <li class="menu-title"><span>Сессия</span></li>
+            <li><a href="{% url 'logout' %}">Выйти</a></li>
+          </ul>
+        </div>
         <button id="theme-toggle" class="btn btn-square btn-ghost" aria-label="Toggle theme">
           <svg id="theme-toggle-light-icon" class="w-6 h-6 hidden" fill="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path d="M12 3.75a.75.75 0 01.75.75v1.5a.75.75 0 01-1.5 0V4.5A.75.75 0 0112 3.75zM12 18a6 6 0 100-12 6 6 0 000 12zm0 3a.75.75 0 01.75.75v1.5a.75.75 0 01-1.5 0v-1.5A.75.75 0 0112 21zm8.25-9a.75.75 0 01.75.75h1.5a.75.75 0 010 1.5h-1.5a.75.75 0 01-.75-.75zm-15 0a.75.75 0 01.75.75H4.5a.75.75 0 010-1.5h1.5a.75.75 0 01-.75-.75zm11.03 7.28a.75.75 0 011.06 1.06l-1.06 1.06a.75.75 0 01-1.06-1.06zm-8.56-8.56a.75.75 0 011.06 1.06L6.44 13.44a.75.75 0 01-1.06-1.06zm8.56-1.06a.75.75 0 01-1.06-1.06l1.06-1.06a.75.75 0 011.06 1.06zm-8.56 8.56a.75.75 0 01-1.06-1.06l1.06-1.06a.75.75 0 011.06 1.06z"/></svg>
           <svg id="theme-toggle-dark-icon" class="w-6 h-6 hidden" fill="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path d="M21.75 12a9.75 9.75 0 11-11.615-9.615 7.5 7.5 0 0011.615 9.615z"/></svg>
@@ -45,7 +72,6 @@
        <a href="{% url 'home' %}" class="text-xl font-bold mb-4 block">daisyAI</a>
        <ul class="menu">
          <li><a href="{% url 'home' %}">Home</a></li>
-         <li><a href="{% url 'accounts' %}">Accounts</a></li>
          <li><a href="{% url 'transfers' %}">Transfers</a></li>
          <li><a href="{% url 'settings' %}">Settings</a></li>
        </ul>
